--- a/package.json
+++ b/package.json
@@ -53,16 +53,15 @@
     "@types/node": "^20.17.43",
     "@types/react": "^19.1.3",
     "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.1",
+    "eslint-config-google": "^0.14.0",
     "eslint-define-config": "^2.1.0",
+    "eslint-plugin-import": "^2.29.1",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.2.9",
     "typescript": "^5.8.3",
-    "@typescript-eslint/parser": "^7.0.1",
-    "@typescript-eslint/eslint-plugin": "^7.0.1",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-config-google": "^0.14.0"
+    "eslint": "^8.56.0",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
+    "eslint-config-next": "15.3.1"
   }
-  }
-
+}
