Added both razorpay and Phonepe Code

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "next": "15.3.1",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
+    "pg-sdk-node": "^2.0.2",
     "radio-group": "^0.0.2",
     "razorpay": "^2.9.6",
     "react": "^18.2.0",
@@ -53,15 +54,16 @@
     "@types/node": "^20.17.43",
     "@types/react": "^19.1.3",
     "@types/react-dom": "^19",
+    "@types/uuid": "^10.0.0",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
+    "eslint": "^8.56.0",
     "eslint-config-google": "^0.14.0",
+    "eslint-config-next": "15.3.1",
     "eslint-define-config": "^2.1.0",
     "eslint-plugin-import": "^2.29.1",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.2.9",
-    "typescript": "^5.8.3",
-    "eslint": "^8.56.0",
-    "@typescript-eslint/eslint-plugin": "^7.18.0",
-    "@typescript-eslint/parser": "^7.18.0",
-    "eslint-config-next": "15.3.1"
+    "typescript": "^5.8.3"
   }
 }
