--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-icons": "^5.5.0",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
+    "twilio": "^5.6.1",
     "zustand": "^5.0.4"
   },
   "devDependencies": {
